--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -434,7 +434,7 @@
                                 {{ form.extract }}
                             </a>
                         </td>
-                        <td><span *ngIf="form.tags && form.tags.length">{{ form.tags.join(', ') }}</span></td>
+                        <td><span *ngIf="form.tags && form.tags.length > 0">{{ form.tags.join(', ') }}</span></td>
                         <td>{{ form.owner.name }}</td>
                         <td>{form.access, select, public {Öffentlich} pin6 {6-stellige PIN} pin8 {8-stellige PIN}}
                         </td>
@@ -512,4 +512,4 @@
     </div>
 </main>
 
-<power-forms-dashboard-newform #newform [tags]="tags" (out)="this.formSort = 'created'; this.formSortOrder = 'desc'; this.formSort = 'created'; updateForms(false)"></power-forms-dashboard-newform>
+<power-forms-dashboard-newform #newform [tags]="tags" (out)="this.formSort = 'created'; this.formSortDesc = true; this.formSort = 'created'; updateForms(false)"></power-forms-dashboard-newform>
