Fixed linter warnings

--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -36,9 +36,8 @@
                 <!-- ToDo: Passende Formatierung finden -->
                 <button type="button"
                         class="btn btn-sm btn-link"
-                        (click)="formattinghelpmodal.open()">
-                    <label i18n>Hilfe zur Formatierung</label>
-                </button>
+                        (click)="formattinghelpmodal.open()"
+                        i18n>Hilfe zur Formatierung</button>
 
                 <!-- question-title -->
                 <div class="form-group">
