Fixed linter warnings

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -192,10 +192,12 @@
             </dd>
             <!-- Umrechnungskoeffizienten -->
             <ng-container *ngFor="let umrechnung of feature.properties.umrechnungstabellenwerte">
+                <!-- [html-validate-disable-next element-permitted-content] -->
                 <dt class="col-md-5"
                     role="rowheader">
                     {{brzStrings.conversion | hyphenate}}
                 </dt>
+                <!-- [html-validate-disable-next element-permitted-content] -->
                 <dd class="col-md-7"
                     role="cell">
                     <a class="btn-link"
