--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -77,7 +77,7 @@
                     i18n-title
                     title="Formular bearbeiten"
                     [routerLink]="['/forms/editor', form.id]"
-                    *ngIf="form.status === 'created' && !auth.IsAuthEnabled()"> <!-- TODO: Autorisierungsfunktion -->
+                    *ngIf="form.status === 'created' && auth.IsAuthorized(['admin', 'manager'], form.owner.id, form.groups)">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
@@ -139,7 +139,7 @@
                 </svg>
                 <span class="d-none d-sm-inline ml-1" i18n>Formular exportieren</span>
             </button>
-            <button type="button" class="btn btn-primary btn-sm mr-2" i18n-title title="Formular Einstellungen" (click)="settings.open(form)" *ngIf="!auth.IsAuthEnabled()"> <!-- TODO: Autorisierungsfunktion -->
+            <button type="button" class="btn btn-primary btn-sm mr-2" i18n-title title="Formular Einstellungen" (click)="settings.open(form)" *ngIf="auth.IsAuthorized(['admin', 'manager', 'editor'], form.owner.id, form.groups)">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-gear" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -154,7 +154,7 @@
                     i18n-title
                     title="Formular veröffentlichen"
                     (click)="publish.open(form.id)"
-                    *ngIf="form.status === 'created' && !auth.IsAuthEnabled()"> <!-- TODO: Autorisierungsfunktion -->
+                    *ngIf="form.status === 'created' && auth.IsAuthorized(['admin', 'manager'], form.owner.id, form.groups)">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
@@ -173,7 +173,7 @@
                     i18n-title
                     title="Formular archivieren"
                     (click)="archiveForm()"
-                    *ngIf="form.status === 'published' && !auth.IsAuthEnabled()"> <!-- TODO: Autorisierungsfunktion -->
+                    *ngIf="form.status === 'published' && auth.IsAuthorized(['admin', 'manager'], form.owner.id, form.groups)">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
@@ -192,7 +192,7 @@
                     i18n-title
                     title="Formular löschen"
                     (click)="deleteForm()"
-                    *ngIf="form.status !== 'published' && !auth.IsAuthEnabled()"> <!-- TODO: Autorisierungsfunktion -->
+                    *ngIf="form.status !== 'published' && auth.IsAuthorized(['admin', 'manager'], form.owner.id, form.groups)">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
@@ -416,7 +416,7 @@
                                     i18n-title
                                     title="Antwort löschen"
                                     (click)="deleteTask(i)"
-                                    *ngIf="!auth.IsAuthEnabled()"> <!-- TODO: Autorisierungsfunktion -->
+                                    *ngIf="auth.IsAuthorized(['admin', 'manager'], form.owner.id, form.groups)">
                                 <svg width="1em"
                                      height="1em"
                                      viewBox="0 0 16 16"
@@ -443,7 +443,7 @@
                     i18n-title
                     title="Neue PIN erstellen"
                     (click)="maketask.open()"
-                    *ngIf="form.status === 'published' && form.access !== 'public' && !auth.IsAuthEnabled()"> <!-- TODO: Autorisierungsfunktion -->
+                    *ngIf="form.status === 'published' && form.access !== 'public' && auth.IsAuthorized(['admin', 'manager', 'editor'], form.owner.id, form.groups)">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
