--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -254,7 +254,7 @@
                     </div>
 
                     <div class="form-group mb-0">
-                        <input class="form-control" id="form-title-search" type="text" role="search" i18n-placeholder placeholder="Titel" i18n-aria-label aria-label="Titel" (change)="formTitle = $event.target.value; updateForms(false)">
+                        <input class="form-control" id="form-search" type="text" role="search" i18n-placeholder placeholder="Suche" i18n-aria-label aria-label="Suche" (change)="formSearch = $event.target.value; updateForms(false)">
                     </div>
                 </div>
             </div>
