submit public form

--- a/power/src/app/fragebogen/fillout/fillout.component.html
+++ b/power/src/app/fragebogen/fillout/fillout.component.html
@@ -27,11 +27,10 @@
             </select>
         </div>
     </div>
-
     <power-forms-surveyjs-wrapper *ngIf="form.access !== 'public'"
                                   [model]="form.content"
                                   [css]="data.css_style"
-                                  (submitResult)="submit($event)"
+                                  (submitResult)="submit($event);"
                                   (interimResult)="progress($event)"
                                   (changes)="changed($event)"
                                   #wrapper>
