--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -475,7 +475,7 @@
                     id="button-import"
                     i18n-title
                     title="Formular importieren"
-                    (click)="importForm()">
+                    (click)="importForm(); this.formSort = 'created'; this.formSortDesc = true; this.formSort = 'created'; updateForms(false)">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
