--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -17,9 +17,9 @@
                     d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
             </svg>
             <span class="ml-1" aria-hidden="true" i18n>Formulare</span>
-            <div class="float-right">
+            <!-- <div class="float-right">
                 <input class="form-control" id="form-search" type="text" role="search" placeholder="Suche" aria-description="Suchen Sie hier nach einem Formular." i18n-placeholder i18n-aria-description (change)="search = $event.target.value; update(false)">
-            </div>
+            </div> -->
         </div>
         <div class="card-body table-responsive p-0">
             <table class="table table-hover m-0">
