--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="nav px-auto"
+                <div class="nav px-auto w-100 max-search-width"
                      style="position: relative;">
                     <power-geosearch [(resetGeosearch)]="resetGeosearch"
                                      [adresse]="adresse"
