--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -59,8 +59,7 @@
                 </div>
                 <div class="nav px-auto w-100 max-search-width"
                      style="position: relative;">
-                    <power-geosearch [(resetGeosearch)]="resetGeosearch"
-                                     [adresse]="adresse"
+                    <power-geosearch [adresse]="adresse"
                                      (selectResult)="onSearchSelect($event)"></power-geosearch>
                 </div>
                 <div class="nav">
@@ -246,7 +245,6 @@
 
     <power-geosearch [class.d-none]="!searchActive"
                      [class]="isCollapsed ? 'd-lg-none' : 'd-xxl-none'"
-                     [(resetGeosearch)]="resetGeosearch"
                      [adresse]="adresse"
                      (selectResult)="onSearchSelect($event)"></power-geosearch>
 
