--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -14,8 +14,7 @@
                             </div>
                             <div class="nav px-auto"
                                  style="position: relative;">
-                                <power-geosearch [(resetGeosearch)]="resetGeosearch"
-                                                 (selectResult)="flyTo($event)"></power-geosearch>
+                                <power-geosearch (selectResult)="flyTo($event)"></power-geosearch>
                                 <!-- <button class="nav-link btn"
                                         type="button"
                                         (click)="selectingFlurstueck()"
@@ -237,7 +236,6 @@
                 </div>
 
                 <power-geosearch [class.d-none]="!searchActive"
-                                 [(resetGeosearch)]="resetGeosearch"
                                  (selectResult)="flyTo($event)"></power-geosearch>
 
 
@@ -337,8 +335,8 @@
                                         i18n>Wert</th>
                                 </tr>
                                 <tr *ngFor="let feature of this.flurstueckSelection | keyvalue">
-                                    <td>{{feature.value.properties.amtlicheflaeche | number }} m&#178;</td>
-                                    <td>{{feature.value.properties.wert | currency:'EUR':"symbol" : '1.2-2'}}</td>
+                                    <!-- <td>{{feature.value.properties.amtlicheflaeche | number }} m&#178;</td>
+                                    <td>{{feature.value.properties.wert | currency:'EUR':"symbol" : '1.2-2'}}</td> -->
                                 </tr>
                             </tbody>
                         </table>
