Markdown in orgin/dev

--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -48,6 +48,10 @@
                            i18n>Dieser Text wird auf jeder Seite vom Formular angezeigt werden.</small>
                 </div>
 
+                <!-- markdown-instructions -->
+                <power-markdown-instructions #formattinghelpmodal>
+                </power-markdown-instructions>
+
                 <!-- form-locale-->
                 <div class="form-group">
                     <label for="form-locale"
@@ -410,6 +414,11 @@
                                                             eid="page-description-{{ i }}">
                             </power-forms-editor-localeinput>
                         </div>
+
+                        <!-- markdown-instructions -->
+                        <power-markdown-instructions #formattinghelpmodal>
+                        </power-markdown-instructions>
+
 
                         <!-- page-questionsOrder-->
                         <div class="form-group">
