--- a/power/src/app/immobilien/immobilien/immobilien.component.scss
+++ b/power/src/app/immobilien/immobilien/immobilien.component.scss
@@ -79,4 +79,8 @@ span.download {
 span.download:hover {
     color: #c4153a;
 }
+
+table, th, td {
+    border: 1px solid black;
+}
 /* vim: set expandtab ts=4 sw=4 sts=4: */
